syntax = "proto3";

package agent.v1;
option go_package = "agent/v1;agentpb";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

service AgentService {
  rpc invoke(FunctionRequest) returns (FunctionResponse) {}
}

message FunctionRequest {
  string id = 1;
  string type = 2;
  oneof data {
    HTTPRequestData http_data = 3;
  }
}

message HTTPRequestData {
  string method = 1;
  string path = 2;
  string source_ip = 3;
  map<string, string> headers = 4;
  map<string, string> query_params = 5;
  google.protobuf.Struct body = 6;
}

message FunctionResponse {
  string id = 1;
  int32 status = 2;
  string status_message = 3;
  google.protobuf.Struct data = 4;
  google.protobuf.Timestamp invocation_time = 5;
  google.protobuf.Timestamp completion_time = 6;
}